--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -41,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/react-router-config": "^5.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "classnames": "^2.3.1"
   }
 }
