--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^4.21.4",
     "global": "^4.4.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-config": "^5.1.1",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
+    "@types/lodash": "^4.14.182",
     "@types/react-router-config": "^5.0.6",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.3.1"
