--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.21.4",
+    "axios": "^0.27.2",
     "global": "^4.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -51,6 +52,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react-router-config": "^5.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
