--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
